[tool.poetry]
name = "pgzero-tutorials"
version = "0.1.0"
description = ""
authors = ["Matt G <mdgosden@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pgzero = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
